--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,8 @@ li {
   border: none;
   font-family: 'Roboto', sans-serif;
   width: 100%;
+  min-width: 700px;
+  max-width: 700px;
 }
 .input-button__create-task {
   border-radius: 5px;
